# ft_transcendence

./: .gitignore  Makefile  README.md  docker-compose.yml  env  example.env  game.html  index.html  login.txt  main.js  package-lock.json  package.json  server.py  toDo.txt
backend/: .gitignore  Dockerfile  README.md  entrypoint.sh  example.env  manage.py  pyproject.toml  server.py
backend/pong/: __init__.py  ai.py  app.py  collision.py  engine.py  entities.py  pong_backend.py  types.py
backend/pong/test/: __init__.py  app.py  draw.py  pypong.py
backend/scripts/: generate_secret_key.py  visualize_db.sh
backend/transcendance_backend/: admin.py  apps.py  asgi.py  bs-config.js  consumers.py  forms.py  index.html  manager.py  models.py  package-lock.json  package.json  settings.py  signals.py  tests.py  urls.py  utils.py  views.py
backend/transcendance_backend/fixtures/: test_data.json
backend/transcendance_backend/migrations/: 0003_pool_remove_game_difficulty_remove_game_num_players_and_more.py  0004_alter_player_name.py  0005_alter_player_games_alter_player_tournaments.py  0006_alter_tournament_pools.py  0008_rename_joined_players_tournament_players.py  0009_alter_game_players.py  0010_alter_game_players_alter_player_blocked_users.py  0011_remove_tournament_pools_game_power_ups_and_more.py  0012_game_created_by_player_username_alter_player_name.py  0012_player_avatar_player_user.py  0013_alter_player_avatar.py  (+14 more)
backend/transcendence_backend/: admin.py  apps.py  asgi.py  consumers.py  middleware.py  models.py  settings.py  urls.py  validators.py  views.py  wsgi.py
(+249 files in other folders)
