[tool.poetry]
name = "transcendance-backend"
version = "0.1.0"
description = "Django backend application for ft_transcendance 42 project."
authors = ["Félix JULLIEN <jullienfelix@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.7"
psycopg2-binary = "^2.9.9"
django-extensions = "^3.2.3"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
websockets = "^12.0"
channels = {extras = ["daphne"], version = "^4.0.0"}
django-imagekit = "^5.0.0"
channels-redis = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pygame = "^2.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
